--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(EXAMPLE_DIR ${CMAKE_BINARY_DIR}/examples)
 file(MAKE_DIRECTORY "${EXAMPLE_DIR}/pipelines/output")
 
+add_subdirectory(applications)
 add_subdirectory(cpp)
 add_subdirectory(external)
 
