Sprokit  python tests cmake refactor
Refactored python sprokit tests to leverage new pytest framework

--- a/python/kwiver/arrows/tests/CMakeLists.txt
+++ b/python/kwiver/arrows/tests/CMakeLists.txt
@@ -15,3 +15,7 @@ foreach (modname IN LISTS __all_modnames)
     arrows/tests
     ${modname})
 endforeach()
+include(kwiver-tests-setup-python)
+foreach (modname in LISTS __all_modnames)
+  kwiver_add_pytest(${modname} python)
+endforeach()
