--- a/python/kwiver/sprokit/tests/modules/CMakeLists.txt
+++ b/python/kwiver/sprokit/tests/modules/CMakeLists.txt
@@ -1,4 +1,7 @@
 ##############################
 # Module tests
 ##############################
-kwiver_discover_python_tests(pymodules test-pymodules.py)
+kwiver_add_python_module(${CMAKE_CURRENT_SOURCE_DIR}/test-pymodules.py sprokit/tests/modules test-pymodules)
+include(kwiver-setup-tests-python)
+kwiver_add_pytest(test-pymodules python)
+# kwiver_discover_python_tests(pymodules test-pymodules.py)
