--- a/python/kwiver/sprokit/tests/test/CMakeLists.txt
+++ b/python/kwiver/sprokit/tests/test/CMakeLists.txt
@@ -1,3 +1,8 @@
 project(sprokit_test_python_test)
 
-kwiver_discover_python_tests(test test-test.py)
+kwiver_add_python_module(${CMAKE_CURRENT_SOURCE_DIR}/test-test.py
+                            sprokit/tests/test test-test)
+
+include(kwiver-setup-tests-python)
+kwiver_add_pytest(test-test python)
+# kwiver_discover_python_tests(test test-test.py)
