--- a/python/kwiver/sprokit/tests/sprokit/pipeline/CMakeLists.txt
+++ b/python/kwiver/sprokit/tests/sprokit/pipeline/CMakeLists.txt
@@ -21,14 +21,20 @@ set(__simple_testable_modnames
 
 # KWIVER_ENABLE_TESTS is always true for now (because we are in the test
 # subdir), but the python tests should be moved to the python source dir.
-if (KWIVER_ENABLE_TESTS)
-  include(kwiver-test-setup)
-  # Register individual tests with ctest
+if (KWIVER_ENABLE_TESTS and PYTEST_RUNNER)
+
+# Register individual tests with ctest
   foreach (group IN LISTS __simple_testable_modnames)
     # SeeAlso:
     #     # defines sprokit_discover_python_tests
     #     sprokit/conf/sprokit-macro-python-tests.cmake
-    kwiver_discover_python_tests(${group} test-${group}.py)
+    kwiver_add_python_module(${CMAKE_CURRENT_SOURCE_DIR}/${group}.py sprokit/tests/sprokit/pipeline ${group})
+  endforeach()
+
+  include(kwiver-setup-tests-python)
+
+  foreach (group in LISTS __simple_testable_modnames)
+    kwiver_add_pytest(${group} python)
   endforeach()
 endif()
 
