Cmake sprokit test formatting fix

--- a/python/kwiver/arrows/tests/CMakeLists.txt
+++ b/python/kwiver/arrows/tests/CMakeLists.txt
@@ -15,7 +15,9 @@ foreach (modname IN LISTS __all_modnames)
     arrows/tests
     ${modname})
 endforeach()
-include(kwiver-tests-setup-python)
-foreach (modname in LISTS __all_modnames)
-  kwiver_add_pytest(${modname} python)
+include(kwiver-setup-tests-python)
+foreach (modname IN LISTS __all_modnames)
+  if (NOT ${modname} STREQUAL "__init__")
+    kwiver_add_pytest(${modname} python)
+  endif()
 endforeach()
