--- a/examples/pipelines/burnout_on_video.pipe.in
+++ b/examples/pipelines/burnout_on_video.pipe.in
@@ -29,11 +29,11 @@ process writer
 ###############################################################################
 
 connect from input.image
-        to   detect_burnin__in.image
+        to   inpaint_burnin__in_image.image
 
 # Optionally write out features for debugging
 # connect from detect_burnin__filter.image
 #         to filtered_writer.image
 
-connect from inpaint_burnin__inpainted.image
+connect from inpaint_burnin__out_inpainted.image
         to   writer.image
