Fix Python build
Several places are failing entirely to add the includes for PyBind11,
and those places that do are adding them via include_directories.
Instead, link the pybind11::pybind11 target in all places that need
PyBind11.

This fixes trying to build with a PyBind11 that is not in an include
directory that is already being used for some other reason.

--- a/python/kwiver/vital/config/CMakeLists.txt
+++ b/python/kwiver/vital/config/CMakeLists.txt
@@ -1,5 +1,3 @@
-include_directories(${pybind11_INCLUDE_DIR})
-
 set( vital_config_python_headers
      config.h
     )
@@ -16,7 +14,7 @@ kwiver_add_python_library( config
     )
 
 target_link_libraries( python-vital.config-config
-                      PUBLIC ${PYTHON_LIBRARIES}
+                      PUBLIC ${PYTHON_LIBRARIES} pybind11::pybind11
                       vital_config
                       PRIVATE vital
                      )
