--- a/python/kwiver/vital/algo/CMakeLists.txt
+++ b/python/kwiver/vital/algo/CMakeLists.txt
@@ -1,7 +1,5 @@
 project(vital_python_algo)
 
-include_directories(${pybind11_INCLUDE_DIR})
-
 kwiver_add_python_library(algos
   vital/algo
   activity_detector.h
@@ -189,7 +187,7 @@ kwiver_add_python_library(algorithm_factory
 )
 
 target_link_libraries(python-vital.algo-algorithm_factory
-  PUBLIC ${PYTHON_LIBRARIES}
+  PUBLIC ${PYTHON_LIBRARIES} pybind11::pybind11
           vital
           vital_algo
 )
