Never use public linking for bindings
Modify Python binding leaf libraries (but not utility libraries such as
vital_python_util), which we don't expect that anything will ever link
anyway, to always use PRIVATE linking. This improves consistency, as
most were already PRIVATE, but some for no apparent reason used PUBLIC
or even a mix of linking types.

--- a/python/kwiver/vital/types/CMakeLists.txt
+++ b/python/kwiver/vital/types/CMakeLists.txt
@@ -18,7 +18,7 @@ kwiver_add_python_library(types
   )
 
 target_link_libraries(python-vital.types-types
-  PUBLIC ${PYTHON_LIBRARIES} pybind11::pybind11
+  PRIVATE ${PYTHON_LIBRARIES} pybind11::pybind11
          vital)
 
 kwiver_add_python_library(activity
