--- a/python/kwiver/vital/config/CMakeLists.txt
+++ b/python/kwiver/vital/config/CMakeLists.txt
@@ -14,9 +14,8 @@ kwiver_add_python_library( config
     )
 
 target_link_libraries( python-vital.config-config
-                      PUBLIC ${PYTHON_LIBRARIES} pybind11::pybind11
-                      vital_config
-                      PRIVATE vital
+                      PRIVATE ${PYTHON_LIBRARIES} pybind11::pybind11
+                      vital_config vital
                      )
 
 kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py
