Refactor optional python json serializer
Json serializer arrow test was previously added regardless of whether
the arrow was actually enabled, leading to failing tests.
Implement more modular behavior.
Prevent util files from being added to tests.
Use correct BBox python import.

--- a/python/kwiver/arrows/tests/CMakeLists.txt
+++ b/python/kwiver/arrows/tests/CMakeLists.txt
@@ -1,6 +1,5 @@
 
 set(__testable_modnames
-  test_serialize_json
   )
 
 # All python filenames_we in the vital.tests module
@@ -10,14 +9,19 @@ set(__all_modnames
   ${__testable_modnames}
   )
 
+if (KWIVER_ENABLE_SERIALIZE_JSON)
+  list(APPEND __testable_modnames
+              test_serialize_json
+                                )
+endif()
+
 foreach (modname IN LISTS __all_modnames)
   kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/${modname}.py
     arrows/tests
     ${modname})
 endforeach()
+
 include(kwiver-setup-tests-python)
-foreach (modname IN LISTS __all_modnames)
-  if (NOT ${modname} STREQUAL "__init__")
+foreach (modname IN LISTS __testable_modnames)
     kwiver_add_pytest(${modname} python)
-  endif()
 endforeach()
