--- a/arrows/ceres/CMakeLists.txt
+++ b/arrows/ceres/CMakeLists.txt
@@ -42,6 +42,7 @@ kwiver_add_library( kwiver_algo_ceres
 target_link_libraries( kwiver_algo_ceres
   PUBLIC               vital_algo
   PRIVATE              ceres
+                       kwiver_algo_mvg
   )
 if(NOT CERES_USES_MINIGLOG)
   target_link_libraries( kwiver_algo_ceres
