--- a/.uncrustify.cfg
+++ b/.uncrustify.cfg
@@ -393,7 +393,9 @@ nl_before_access_spec           = 2
 nl_after_access_spec            = 1
 nl_comment_func_def             = 0
 nl_after_try_catch_finally      = 0
+nl_before_namespace             = 2
 nl_inside_namespace             = 2
+nl_after_namespace              = 2
 eat_blanks_after_open_brace     = true
 eat_blanks_before_close_brace   = true
 nl_remove_extra_newlines        = 0
