--- a/arrows/vxl/CMakeLists.txt
+++ b/arrows/vxl/CMakeLists.txt
@@ -84,7 +84,7 @@ kwiver_add_library( kwiver_algo_vxl
 target_link_libraries( kwiver_algo_vxl
   PUBLIC               vital_algo
                        vil vpgl vgl
-  PRIVATE              vital_klv
+  PRIVATE              kwiver_algo_klv
                        vital_config
                        kwiver_algo_mvg
                        rrel rsdl
