Add error message if VTK enabled but KLV not

--- a/arrows/vtk/CMakeLists.txt
+++ b/arrows/vtk/CMakeLists.txt
@@ -2,6 +2,10 @@
 
 set(CMAKE_FOLDER "Arrows/VTK")
 
+if(NOT KWIVER_ENABLE_KLV)
+  message(FATAL_ERROR "-- The KLV arrow must be enabled (KWIVER_ENABLE_KLV)")
+endif()
+
 set( plugin_vtk_headers
   depth_utils.h
   mesh_coloration.h
