--- a/arrows/core/CMakeLists.txt
+++ b/arrows/core/CMakeLists.txt
@@ -49,6 +49,7 @@ set( plugin_core_headers
   uv_unwrap_mesh.h
   video_input_filter.h
   video_input_image_list.h
+  video_input_metadata_filter.h
   video_input_pos.h
   video_input_splice.h
   video_input_split.h
@@ -119,6 +120,7 @@ set( plugin_core_sources
   uv_unwrap_mesh.cxx
   video_input_filter.cxx
   video_input_image_list.cxx
+  video_input_metadata_filter.cxx
   video_input_pos.cxx
   video_input_splice.cxx
   video_input_split.cxx
