Move build dependency to correct arrows

--- a/arrows/vxl/CMakeLists.txt
+++ b/arrows/vxl/CMakeLists.txt
@@ -3,6 +3,10 @@
 
 set(CMAKE_FOLDER "Arrows/VXL")
 
+if(NOT KWIVER_ENABLE_KLV)
+  message(FATAL_ERROR "The VXL arrow requires the KLV arrow (KWIVER_ENABLE_KLV)")
+endif()
+
 set(vxl_headers_public
   aligned_edge_detection.h
   average_frames.h
