Add metadata filter/transform algorithm
Create interface for an algorithm that filters/transforms video
metadata, using both the original metadata and (optionally) the video
frame image.

--- a/vital/algo/CMakeLists.txt
+++ b/vital/algo/CMakeLists.txt
@@ -48,6 +48,7 @@ set( public_headers
   integrate_depth_maps.h
   interpolate_track.h
   keyframe_selection.h
+  metadata_filter.h
   metadata_map_io.h
   match_descriptor_sets.h
   match_features.h
@@ -111,6 +112,7 @@ set( sources
   integrate_depth_maps.cxx
   interpolate_track.cxx
   keyframe_selection.cxx
+  metadata_filter.cxx
   metadata_map_io.cxx
   match_descriptor_sets.cxx
   match_features.cxx
