--- a/arrows/core/CMakeLists.txt
+++ b/arrows/core/CMakeLists.txt
@@ -37,6 +37,7 @@ set( plugin_core_headers
   match_features_fundamental_matrix.h
   match_features_homography.h
   match_tracks.h
+  mesh_intersect.h
   mesh_operations.h
   metadata_map_io_csv.h
   read_object_track_set_kw18.h
@@ -109,6 +110,7 @@ set( plugin_core_sources
   match_features_fundamental_matrix.cxx
   match_features_homography.cxx
   match_tracks.cxx
+  mesh_intersect.cxx
   mesh_operations.cxx
   metadata_map_io_csv.cxx
   read_object_track_set_kw18.cxx
