--- a/vital/tests/CMakeLists.txt
+++ b/vital/tests/CMakeLists.txt
@@ -45,6 +45,7 @@ kwiver_discover_gtests(vital iterator                       LIBRARIES ${test_lib
 kwiver_discover_gtests(vital local_cartesian                LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital metadata                       LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital metadata_io                    LIBRARIES ${test_libraries} ARGUMENTS "${kwiver_test_data_directory}")
+kwiver_discover_gtests(vital metadata_types                 LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital polygon                        LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital rotation                       LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital signal                         LIBRARIES ${test_libraries})
