Add KLV blob wrapper class

--- a/arrows/klv/tests/CMakeLists.txt
+++ b/arrows/klv/tests/CMakeLists.txt
@@ -4,10 +4,11 @@ set(CMAKE_FOLDER "Arrows/KLV/Tests")
 
 include(kwiver-test-setup)
 
-set( test_libraries kwiver_algo_core vital )
+set( test_libraries kwiver_algo_core kwiver_algo_klv vital )
 
 ##############################
 # KLV tests
 ##############################
 
+kwiver_discover_gtests( klv klv_blob       LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_read_write LIBRARIES ${test_libraries} )
