Refactor KLV int read / write
Move KLV read / write function implementations for integer types from a
.txx file to a .cxx file with explicit instantiations.

--- a/arrows/klv/CMakeLists.txt
+++ b/arrows/klv/CMakeLists.txt
@@ -11,6 +11,7 @@ set( sources
   klv_data.cxx
   klv_key.cxx
   klv_parse.cxx
+  klv_read_write_int.cxx
   klv_0601.cxx
   klv_0104.cxx
   misp_time.cxx
