Jigger around the types lib, add more types for py config
(Re)Discovered some type specialization of value casting in config_block
that some types provide overloads for, causing the need for vital_types
to depend on vital_config. Also moved the typedefs into an
aforementioned "common" header file at the vital root and out of types
subspace.

--- a/vital/types/CMakeLists.txt
+++ b/vital/types/CMakeLists.txt
@@ -6,32 +6,37 @@
 #
 
 set( vital_types_public_headers
-     core.h
-     vector.h
-     )
-set( vital_type_private_headers
-     )
+  geo_polygon.h
+  geodesy.h
+  polygon.h
+  vector.h
+  )
 set( vital_type_sources
-     )
+  geo_polygon.cxx
+  geodesy.cxx
+  polygon.cxx
+  )
 
 kwiver_install_headers(
   ${vital_types_public_headers}
   SUBDIR vital/types
 )
-#kwiver_install_headers(  # generated export header file
-#  ${CMAKE_CURRENT_BINARY_DIR}/vital_types_export.h
-#  SUBDIR vital/types
-#  NOPATH
-#)
-#kwiver_add_library(
-#  vital_types
-#  ${vital_types_public_headers}
-#  ${vital_type_private_headers}
-#  ${vital_type_sources}
-#  ${CMAKE_CURRENT_BINARY_DIR}/vital_types_export.h
-#  )
-#
-## Depend on file configuration
-#add_dependencies( vital_types kwiver_configure )
-#
-#target_link_libraries( vital_types )
+kwiver_install_headers(  # generated export header file
+  ${CMAKE_CURRENT_BINARY_DIR}/vital_types_export.h
+  SUBDIR vital/types
+  NOPATH
+)
+kwiver_add_library(
+  vital_types
+  ${vital_types_public_headers}
+  ${vital_type_sources}
+  ${CMAKE_CURRENT_BINARY_DIR}/vital_types_export.h
+  )
+
+# Depend on file configuration
+add_dependencies( vital_types kwiver_configure )
+
+target_link_libraries( vital_types
+  PUBLIC    Eigen3::Eigen
+            vital_config
+  )
