reintroduce config bindings

--- a/python/kwiver/CMakeLists.txt
+++ b/python/kwiver/CMakeLists.txt
@@ -1,1 +1,4 @@
-#kwiver_add_python_module(__init__.py "" __init__)
+# Yes, this needs the CMAKE_CURRENT_SOURCE_DIR here.
+kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py "" __init__ )
+
+add_subdirectory( vital )
