--- a/vital/config/CMakeLists.txt
+++ b/vital/config/CMakeLists.txt
@@ -56,6 +56,7 @@ target_link_libraries( vital_config
   PRIVATE              kwiversys
                        vital_logger
                        vital_util
+                       vital_vpm  # uses pluggable
   )
 
 ###
