minor rename of config binding source files

--- a/python/kwiver/vital/config/CMakeLists.txt
+++ b/python/kwiver/vital/config/CMakeLists.txt
@@ -1,11 +1,11 @@
 kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py "vital/config" __init__ )
 
 set( module_headers
-  config_module_helpers.h
+  module_config_helpers.h
   )
 set( module_sources
-  config_module.cxx
-  config_module_helpers.cxx
+  module_config.cxx
+  module_config_helpers.cxx
   )
 
 kwiver_add_python_library(
