test-interface: C++ side interface and plugin

--- a/vital/CMakeLists.txt
+++ b/vital/CMakeLists.txt
@@ -403,3 +403,5 @@ add_subdirectory( applets_plugins )
 #if (KWIVER_ENABLE_TESTS)
 #  add_subdirectory( tests )
 #endif()
+
+add_subdirectory( test_interface )
