--- a/python/kwiver/vital/CMakeLists.txt
+++ b/python/kwiver/vital/CMakeLists.txt
@@ -1,3 +1,4 @@
 kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py "vital" __init__ )
 
 add_subdirectory( config )
+add_subdirectory( plugins )
