--- a/python/kwiver/vital/CMakeLists.txt
+++ b/python/kwiver/vital/CMakeLists.txt
@@ -2,3 +2,4 @@ kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py "vital" __init
 
 add_subdirectory( config )
 add_subdirectory( plugins )
+add_subdirectory( test_interface )
