Add KLV ST0601 parser

--- a/arrows/klv/tests/CMakeLists.txt
+++ b/arrows/klv/tests/CMakeLists.txt
@@ -14,5 +14,6 @@ kwiver_discover_gtests( klv klv_blob            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_checksum        LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_read_write      LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_0104            LIBRARIES ${test_libraries} )
+kwiver_discover_gtests( klv klv_0601            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1108            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1108_metric_set LIBRARIES ${test_libraries} )
