Add basic initial docs restore
Added attaching kwiver-sphinx and depending on kitware-doxygen

--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -1,5 +1,11 @@
+# Building
+scikit-build
+# Documentation
+breathe
+sphinx
+sphinx_rtd_theme
+# Utility
 black
 ipython
 jedi < 0.18
 pip-tools
-scikit-build
