Add interval_map utility class

--- a/vital/util/CMakeLists.txt
+++ b/vital/util/CMakeLists.txt
@@ -22,6 +22,7 @@ set( public_headers
   data_stream_reader.h
   hex_dump.h
   interval.h
+  interval_map.h
   string.h
   string_editor.h
   simple_stats.h
