--- a/vital/util/tests/CMakeLists.txt
+++ b/vital/util/tests/CMakeLists.txt
@@ -13,6 +13,7 @@ set( test_libraries vital vital_vpm kwiversys )
 kwiver_discover_gtests(vital any_converter      LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital data_stream_reader LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital interval           LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital interval_map       LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital string             LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital string_editor      LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital thread_pool        LIBRARIES ${test_libraries})
