Add direct KLV -> JSON exporter

--- a/arrows/serialize/json/CMakeLists.txt
+++ b/arrows/serialize/json/CMakeLists.txt
@@ -52,6 +52,11 @@ set( sources
   track_state.cxx
   )
 
+if( KWIVER_ENABLE_KLV )
+  list( APPEND headers_public klv/load_save_klv.h )
+  list( APPEND sources klv/load_save_klv.cxx )
+endif()
+
 kwiver_install_headers(
   SUBDIR     arrows/serialize/json
   ${headers_public}
@@ -71,6 +76,10 @@ target_link_libraries( kwiver_serialize_json
   PUBLIC               vital_algo
   PRIVATE              ${ZLIB_LIBRARIES}
   )
+
+if( KWIVER_ENABLE_KLV )
+  target_link_libraries( kwiver_serialize_json PRIVATE kwiver_algo_klv )
+endif()
 
 
 algorithms_create_plugin( kwiver_serialize_json
