Add FFmpeg video writer

--- a/vital/CMakeLists.txt
+++ b/vital/CMakeLists.txt
@@ -161,6 +161,7 @@ set( vital_public_headers
   types/transform_2d.h
   types/uid.h
   types/vector.h
+  types/video_settings.h
 )
 
 # ----------------------
