--- a/arrows/ffmpeg/CMakeLists.txt
+++ b/arrows/ffmpeg/CMakeLists.txt
@@ -20,6 +20,7 @@ endif()
 set(ffmpeg_headers_public
   ffmpeg_init.h
   ffmpeg_video_input.h
+  ffmpeg_video_output.h
   ffmpeg_video_settings.h
   )
 
@@ -36,6 +37,7 @@ kwiver_install_headers(
 set(ffmpeg_sources
   ffmpeg_init.cxx
   ffmpeg_video_input.cxx
+  ffmpeg_video_output.cxx
   ffmpeg_video_settings.cxx
   )
 
