Implement ST1204 / ST0601 tag 94

--- a/arrows/klv/CMakeLists.txt
+++ b/arrows/klv/CMakeLists.txt
@@ -26,6 +26,7 @@ set( sources
   klv_0806_user_defined_set.cxx
   klv_1108.cxx
   klv_1108_metric_set.cxx
+  klv_1204.cxx
   misp_time.cxx
   )
 
@@ -48,6 +49,7 @@ set( public_headers
   klv_0806_user_defined_set.h
   klv_1108.h
   klv_1108_metric_set.h
+  klv_1204.h
   misp_time.h
   )
 
