--- a/arrows/klv/tests/CMakeLists.txt
+++ b/arrows/klv/tests/CMakeLists.txt
@@ -18,5 +18,6 @@ kwiver_discover_gtests( klv klv_read_write      LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_0102            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_0104            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_0601            LIBRARIES ${test_libraries} )
+kwiver_discover_gtests( klv klv_0806            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1108            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1108_metric_set LIBRARIES ${test_libraries} )
