Adapted write_pdal algorithm to standard format

--- a/arrows/pdal/CMakeLists.txt
+++ b/arrows/pdal/CMakeLists.txt
@@ -45,8 +45,9 @@ algorithms_create_plugin( kwiver_algo_pdal
   register_algorithms.cxx
   )
 
+message( STATUS "DIRS ${CMAKE_CURRENT_BINARY_DIR}" )
 configure_file(
-  ${CMAKE_CURRENT_BINARY_DIR}/pdal_config.h.in
+  ${CMAKE_CURRENT_SOURCE_DIR}/pdal_config.h.in
   ${CMAKE_CURRENT_BINARY_DIR}/pdal_config.h
   )
 
