Add KLV ST1002 parser

--- a/arrows/klv/tests/CMakeLists.txt
+++ b/arrows/klv/tests/CMakeLists.txt
@@ -20,6 +20,7 @@ kwiver_discover_gtests( klv klv_0104            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_0601            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_0806            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_0903            LIBRARIES ${test_libraries} )
+kwiver_discover_gtests( klv klv_1002            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1010            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1108            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1108_metric_set LIBRARIES ${test_libraries} )
