--- a/arrows/klv/tests/CMakeLists.txt
+++ b/arrows/klv/tests/CMakeLists.txt
@@ -26,3 +26,6 @@ kwiver_discover_gtests( klv klv_1108_metric_set LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1202            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1206            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1303            LIBRARIES ${test_libraries} )
+kwiver_discover_gtests( klv klv_1601            LIBRARIES ${test_libraries} )
+kwiver_discover_gtests( klv klv_1602            LIBRARIES ${test_libraries} )
+kwiver_discover_gtests( klv klv_1607            LIBRARIES ${test_libraries} )
