--- a/arrows/klv/tests/CMakeLists.txt
+++ b/arrows/klv/tests/CMakeLists.txt
@@ -23,3 +23,4 @@ kwiver_discover_gtests( klv klv_0903            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1010            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1108            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1108_metric_set LIBRARIES ${test_libraries} )
+kwiver_discover_gtests( klv klv_1602            LIBRARIES ${test_libraries} )
